--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
+
 :root {
   --primary:#bc4123;
   --secondary:#2b3452;
@@ -11,7 +12,6 @@ body {
   font-family: 'Poppins';
   background: var(--secondary);
 }
-
 * {
   color: #fff;
   margin: 0;
@@ -26,7 +26,7 @@ button {
   padding: 8px;
   border-radius: 4px;
   color: white;
-  background: var(--primary);
+  background-color: var(--primary);
   cursor: pointer;
 }
 
@@ -47,14 +47,14 @@ header nav a {
   text-decoration: none;
   padding: 6px;
   border-radius: 4px;
+  /* background: #ccc; */
 }
 
-header nav a:active {
-  background-color: var(--primary);
+header nav a.active {
+  background: var(--primary);
 }
-
 
 main {
   max-width: 1200px;
-  margin: 4px auto;
+  margin: 40px auto;
 }
