--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,52 @@ main {
   max-width: 1200px;
   margin: 40px auto;
 }
+
+.help-layout nav {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin: 30px 0;
+}
+.help-layout nav a {
+  text-decoration: none;
+  border-radius: 4px;
+  padding: 10px;
+  border: 2px solid white;
+}
+
+.help-layout nav a:hover {
+  border-color: var(--primary);
+}
+
+.help-layout nav a.active {
+  background-color: var(--primary);
+}
+
+.faq .question {
+  background: rgba(0, 0, 0, 0.2);
+  padding: 5px 20px;
+  border-radius: 4px;
+  margin: 20px 0;
+}
+
+form {
+  margin-top: 30px;
+}
+
+form input, form label span, form textarea {
+  display: block;
+}
+
+form input , form textarea {
+  margin-bottom: 30px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 0;
+  width: 300px;
+  color: var(--secondary);
+}
+
+form label span {
+  margin-bottom: 10px;
+}
